--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/chrishamersly-401-advanced-javascript/api-server#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.4.0",
+    "mongoose": "^5.10.0",
     "supergoose": "^0.2.6",
     "supertest": "^4.0.2"
   }
