--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.4.0",
+    "mongo": "^0.1.0",
     "mongoose": "^5.10.0",
     "supergoose": "^0.2.6",
     "supertest": "^4.0.2"
